# cpp-ci-demo

./: CMakeLists.txt
.github/workflows/: cpp-ci.yml  python-tests.yml
python-tests/: test_calculator.py
src/: calculator.h
tests/: test_calculator.cpp
